# dis653

./: README.rst  meson.build
docs/adr/: 0001-record-architecture-decisions.md
samples/: meson.build
samples/blinky/: meson.build
samples/blinky/atmega2560/src/: main.c
samples/blinky/atmega32u4/: meson.build
samples/blinky/stm32f767zi/: meson.build  readme.txt
samples/blinky/stm32f767zi/Inc/: main.h  stm32_assert.h  stm32f7xx_it.h
samples/blinky/stm32f767zi/SW4STM32/: startup_stm32f767xx.s
samples/blinky/stm32f767zi/SW4STM32/STM32F767ZI-Nucleo/: .cproject  .cproject_org  .project  .project_org
samples/blinky/stm32f767zi/Src/: main.c  stm32f7xx_it.c  system_stm32f7xx.c
samples/blinky/stm32g474re/: readme.txt
samples/blinky/stm32g474re/Inc/: main.h  stm32_assert.h  stm32g4xx_it.h
samples/blinky/stm32g474re/STM32CubeIDE/: STM32G474RETX_FLASH.ld
samples/blinky/stm32g474re/Src/: main.c  stm32g4xx_it.c
tools/: atmega2560-gcc.txt  atmega328p-gcc.txt  atmega32u4-gcc.txt  stm32f767zi-gcc.txt  stm32g474-gcc.txt
