if host_machine.system() == 'atmega2560'
  subdir('atmega2560')
endif

if host_machine.system() == 'atmega328p'
  subdir('atmega328p')
endif

if host_machine.system() == 'atmega32u4'
  subdir('atmega32u4')
endif

if host_machine.system() == 'stm32g474re'
  subdir('stm32g474re')
endif

if host_machine.system() == 'stm32f767zi'
  subdir('stm32f767zi')
endif
